@@ -1233,6 +1233,7 @@
 	"otherOptions": "Otras opciónes",
 	"outgoing": "Salientes",
 	"pan": "Desplaza",
+	"parameters": "<em>Parameters</em>",
 	"parent": "Padre",
 	"parentDescription": "Descripción padre",
 	"password": "Clave",
