@@ -1233,6 +1233,7 @@
 	"outgoing": "خروجی",
 	"pan": "Pan",
 	"parent": "والدین",
+	"parameters": "<em>Parameters</em>",
 	"parentDescription": "توضیحات والدین",
 	"password": "رمز عبور",
 	"passwordChanged": "رمز عبور تغییر کرد",
