@@ -1233,6 +1233,7 @@
 	"otherOptions": "Altre opzioni",
 	"outgoing": "In uscita",
 	"pan": "Sposta",
+	"parameters": "Parametri",
 	"parent": "Padre",
 	"parentDescription": "Descrizione padre",
 	"password": "Password",
