@@ -1233,6 +1233,7 @@
 	"otherOptions": "他のオプション",
 	"outgoing": "送信",
 	"pan": "パン",
+	"parameters": "<em>Parameters</em>",
 	"parent": "親",
 	"parentDescription": "親の説明",
 	"password": "パスワード",
