@@ -1233,6 +1233,7 @@
 	"otherOptions": "Остале опције",
 	"outgoing": "Одлазне",
 	"pan": "Померање",
+	"parameters": "<em>Parameters</em>",
 	"parent": "Родитељ",
 	"parentDescription": "Опис родитеља",
 	"password": "Лозинка",
