@@ -1233,6 +1233,7 @@
 	"otherOptions": "<em>Other options</em>",
 	"outgoing": "Outgoing",
 	"pan": "Pan",
+	"parameters": "<em>Parameters</em>",
 	"parent": "<em>Parent</em>",
 	"parentDescription": "<em>Parent description</em>",
 	"password": "密码",
